@@ -5,6 +5,7 @@ Package: R.devices
 Version: 2.7.2 [2013-10-15]
 o Now the package vignettes are in vignettes/ and not in inst/doc/,
   which will not be supported by R (>= 3.1.0).
+o ROBUSTNESS: Added package system tests for devSet().
 
 
 Version: 2.7.1 [2013-10-07]
